<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    tools:context=".UnitTest.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Car Rental"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="70dp" />

        <TextView
            android:id="@+id/bannerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Persewaan mobil paling terkenal di Yogyakarta"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="295dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center"
                android:text="Login"/>

            <TextView
                android:id="@+id/registerHere"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Register Here"
                android:layout_marginRight="50dp"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="16sp"/>
    </LinearLayout>

</FrameLayout>